# openedgar

./: .gitignore  INSTALL.md  README.md  hs_help.txt  manage_edgar.py  openedgar.yml  patch_tasks.py  patch_tasks2.py  pyproject.toml  python  steering.md  test_docling_form4.py  test_llm_reconstruction.py  test_rag_query.py  test_secmd_form4.py
paper/: main.aux  (+5 more)
sec_openedgar/: .condarc  Dockerfile  check_db_status.py  code_converter.py  example_sqlalchemy.py  manage.py  migrate_to_sqlalchemy.py  openedgar.yml  package.json  pyproject.toml  requirements_sqlalchemy.txt
sec_openedgar/config/: urls.py  wsgi.py
sec_openedgar/config/settings/: base.py  local.py  production.py  test.py
sec_openedgar/notebooks/: Untitled.ipynb  employment_agreement_sample.ipynb  example_query.ipynb
sec_openedgar/openedgar/: models.py  sec_api.py  tasks.py  views.py
sec_openedgar/openedgar/clients/: local.py  openedgar.py  s3.py
sec_openedgar/openedgar/db/: README.md  __init__.py  helpers.py  models.py  session.py  utils.py
sec_openedgar/openedgar/management/: __init__.py
sec_openedgar/openedgar/management/commands/: __init__.py  backfill_filing_paths.py  backfill_ownership_signatures.py  convert_bulk_filings.py  download_bulk_filings.py  find_filing.py  ingest_filing.py  migrate_archives.py  process_bulk_filings.py  process_legacy_zstd.py  sync_sec_index.py  synthesize_markdown.py
sec_openedgar/openedgar/migrations/: 0003_rename_last_name_company_cik_name_and_more.py  0004_alter_company_cik.py  0005_rename_company_companyinfo_cik.py  0006_alter_companyinfo_cik.py  0007_remove_companyinfo_id_alter_companyinfo_cik.py  0008_remove_companyinfo_state_location_companyfiling_and_more.py  0009_delete_filingindex_rename_s3_path_companyfiling_path_and_more.py  0010_companyfiling_name.py  0011_rename_name_companyfiling_company.py  0012_rename_companyfiling_filing_filingindex.py  0013_alter_companyfacts_id.py  0014_factindex_alter_companyfacts_fact.py  0015_rename_companyfacts_companyfact.py  0016_alter_factindex_description.py  0017_alter_factindex_description_alter_factindex_label.py  0018_alter_companyfact_accession_number.py  0019_formindex.py  0020_remove_formindex_topics_alter_companyfact_formtype_and_more.py  0021_alter_companyfact_end_date_and_more.py  0022_alter_companyfact_frame.py  0023_remove_companyfact_start_date.py  0024_alter_companyinfo_cik.py  0025_aboutpage_analystdashboardpage_bulkfilingindex_and_more.py  0026_filing_documents_index.py  0027_ownershipsubmission_ownershipnonderivtransaction_and_more.py  0028_ownershipderivholding_conversion_or_exercise_price_fn_and_more.py  0029_rename_rpt_owner_cik_ownershipnonderivholding_rptowner_cik_and_more.py  0030_rename_is_ten_percent_owner_ownershipreportingowner_is_10pctowner.py  0031_ownershipreportingowner_rptowner_city_and_more.py  0032_remove_ownershipsubmission_issuer_trading_symbol_and_more.py  0033_ownershipsubmission_issuer_trading_symbol.py  0034_ownershipderivholding_conversion_or_exercise_price_and_more.py  0035_filing_path_components.py  0036_alter_ownershipsubmission_accession_number.py  0037_add_llm_provider_to_analyst_profile.py
sec_openedgar/openedgar/parsers/: base.py  hybrid.py  openedgar.py  ownership.py  ownership_parser.py  registry.py  thirteenf.py
sec_openedgar/openedgar/processes/: analyst_report.py  edgar.py  rag_pipeline.py  symbology.py
sec_openedgar/openedgar/scratch/: check_pyzstd.py  check_pyzstd_streaming.py
sec_openedgar/requirements/: base.txt  local.txt
sec_openedgar/scripts/: run_ablation_baseline.sh  run_celery.sh  run_flower.sh
sec_openedgar/sec_openedgar/taskapp/: celery.py
sec_openedgar/sec_openedgar/templates/: base.html
sec_openedgar/sec_openedgar/templates/openedgar/: filing_analysis_page.html
sec_openedgar/sec_openedgar/templates/pages/: filing_comparison.html  filing_qa.html  rag_dashboard.html
sec_openedgar/sec_openedgar/templates/users/: user_detail.html  user_form.html
sec_openedgar/sec_openedgar/users/: apps.py  models.py  urls.py  views.py
sec_openedgar/sec_openedgar/users/migrations/: 0002_alter_user_first_name.py  0003_alter_user_id.py
sec_openedgar/sec_openedgar/users/tests/: test_analyst_features.py
sec_openedgar/sec_research/evaluation/: evaluate_json_parity.py  full_metrics_latex.txt  gen_latex_table.py  holdout_metrics_final.csv  holdout_metrics_final.json  holdout_summary_Qwen3_14B_Finetuned_Final.json  holdout_summary_Qwen3_30B_Baseline.json  test_bundle_final_500.tar.zst  test_set_accs.txt  test_set_accs_500.txt  test_set_accs_mini.txt  test_set_final_500.txt  test_st.py
sec_openedgar/sec_research/evaluation/failed_json/: 0000899751-21-000039_failed.txt  0001104659-21-079621_failed.txt  0001209191-21-017127_failed.txt  0001273685-26-000010_failed.txt  0001567619-21-022503_failed.txt  0001834600-21-000010_failed.txt
sec_openedgar/sec_research/evaluation/gt_cache/: 0000009346-21-000073.json  0000011544-21-000055.json  0000014930-21-000024.json  0000023197-21-000045.json  0000046080-21-000071.json  0000049600-21-000071.json  0000049826-21-000071.json  0000054480-21-000144.json  0000063754-21-000140.json  0000071829-21-000086.json  0000074303-21-000013.json  0000075252-21-000003.json  0000076605-21-000127.json  0000082166-21-000077.json  (+486 more)
sec_openedgar/sec_research/experiments/: evaluation_holdout_Qwen3_Coder_30B.txt
sec_openedgar/sec_research/finetuning/: bundle_files.txt  surgical_metadata.json  train_accessions_1500.txt  training_bundle_1500.tar.zst  training_bundle_1500_v3.tar.zst
sec_openedgar/sec_research/scripts/: aggregate_metrics.py  analyze_table2_errors.py  calc_gt_support.py  calculate_text_metrics.py  create_research_bundle.py  export_gguf.py  export_gt_json.py  generate_appendix_table.py  generate_paper_tables.py  ingest_to_hdb.py  migrate_to_sqlite.py  prepare_mlx_data.py  run_30b_baseline.sh  run_30b_hardened.sh  run_finetuned.sh  train_30b.sh  train_lora.py  train_mlx.py  validate_markdown_alignment.py
sec_openedgar/sec_research/utils/: inference.py  prompts.py  rag_engine.py
sec_openedgar/utility/: install_python_dependencies.sh
(+1282 files in other folders)
