[project]
name = "openedgar"
version = "0.1.0"
description = "Modernized SEC Ingestion and RAG Pipeline"
readme = "README.md"
authors = [{ name = "Rick Albright", email = "rla3rd@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",
    "whitenoise>=6.6.0",
    "django-redis>=5.4.0",
    "django-werkzeug>=1.0.0",
    "django>=5.0.1",
    "fake-useragent>=1.4.0",
    "django-contrib-postgres>=0.0.1",
    "sec2md>=0.1.0",
    "zstandard>=0.22.0",
    "spacy>=3.7.0",
    "sentence-transformers>=2.5.0",
    "wagtail>=6.0",
    "django-modelcluster>=6.2",
    "django-taggit>=5.0",
    "django-environ>=0.11.2",
    "django-crispy-forms>=2.1",
    "django-allauth>=0.61.1",
    "celery>=5.3.6",
    "boto3>=1.34.76",
    "tika>=2.6.0",
    "crispy-bootstrap4>=2024.1",
    "argon2-cffi>=23.1.0",
    "pandas>=2.2.1",
    "scikit-learn>=1.4.1.post1",
    "pillow>=10.3.0",
    "django-model-utils>=4.5.0",
    "python-slugify>=8.0.4",
    "requests>=2.31.0",
    "notebook>=7.1.2",
    "urllib3>=2.2.1",
    "lxml>=5.2.1",
    "tabula-py>=2.10.0",
    "numpy>=2.2.1",
    "sqlalchemy>=2.0.36",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.14.0",
    "hyperstreamdb>=0.2.2",
    "orjson>=3.9.0",
    "python-dateutil>=2.8.2",
    "httpx[http2]>=0.28.1",
    "secsgml2>=0.1.4",
    "datamule>=2.3.0",
    "docling>=2.86.0",
    "typer>=0.21.2",
    "click>=8.3.2",
    "ipython>=9.12.0",
    "jupyter-server>=2.17.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-asyncio>=1.3.0",
    "hypothesis>=6.151.12",
    "pytest-mock>=3.15.1",
    "selectolax>=0.4.7",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["openedgar"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
