[tool.poetry]
name = "openedgar"
version = "0.1.0"
description = ""
authors = ["Rick Albright <rla3rd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
whitenoise = "^6.6.0"
django-redis = "^5.4.0"
django-werkzeug = "^1.0.0"
django = "^5.0.1"
fake-useragent = "^1.4.0"
edgartools = "2.17.1"
django-contrib-postgres = "^0.0.1"
lexnlp = {path = "packages/lexnlp-4.20-py3-none-any.whl"}
django-environ = "^0.11.2"
django-crispy-forms = "^2.1"
django-allauth = "^0.61.1"
celery = "^5.3.6"
boto3 = "^1.34.76"
tika = "^2.6.0"
crispy-bootstrap4 = "^2024.1"
argon2 = "^0.1.10"
pynvim = "^0.5.0"
argon2-cffi = "^23.1.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pillow = "^10.3.0"
django-model-utils = "^4.5.0"
python-slugify = "^8.0.4"
requests = "^2.31.0"
notebook = "^7.1.2"
urllib3 = "^2.2.1"
lxml = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
